--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   body {
     font-family: system-ui, sans-serif;
-    background: #f0f8ff;
+    background: #e0f7fa;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,8 +17,8 @@
   h1 { margin-bottom: 10px; }
   .weather { margin-bottom: 20px; font-size: 1.2rem; }
   form { display: flex; flex-direction: column; gap: 10px; width: 300px; }
-  input, textarea, button { padding: 10px; font-size: 1rem; width: 100%; }
-  button { cursor: pointer; background: #0077cc; color: white; border: none; border-radius: 5px; }
+  input, textarea, button { padding: 10px; font-size: 1rem; width: 100%; border-radius: 5px; border: 1px solid #ccc; }
+  button { cursor: pointer; background: #0077cc; color: white; border: none; }
   #confirmation { color: green; margin-top: 10px; }
 </style>
 </head>
@@ -37,8 +37,8 @@
 
 <script>
   // === Supabase Setup ===
-  const supabaseUrl = 'YOUR_SUPABASE_URL';
-  const supabaseKey = 'YOUR_SUPABASE_ANON_KEY';
+  const supabaseUrl = 'https://ofnlpqfscyecatetnuqi.supabase.co';
+  const supabaseKey = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
   const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
   const form = document.getElementById('requestForm');
@@ -50,14 +50,19 @@
     const room = document.getElementById('room').value;
     const requestText = document.getElementById('request').value;
 
-    await supabase.from('work_requests').insert([{ name, room, request: requestText, status: 'Pending' }]);
-    confirmation.innerText = "Request submitted!";
-    form.reset();
+    try {
+      await supabase.from('work_requests').insert([{ name, room, request: requestText, status: 'Pending' }]);
+      confirmation.innerText = "Request submitted!";
+      form.reset();
+    } catch (err) {
+      confirmation.innerText = "Error submitting request.";
+      console.error(err);
+    }
   });
 
   // === OpenWeatherMap API for Orange County ===
   const weatherEl = document.getElementById('weather');
-  const apiKey = 'YOUR_OPENWEATHERMAP_API_KEY';
+  const apiKey = 'YOUR_OPENWEATHERMAP_API_KEY'; // Replace with your free key
   const location = 'Orange County, US';
 
   async function getWeather() {
