--- a/index.html
+++ b/index.html
@@ -3,40 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Dashboard v1.0</title>
+<title>Beach House Dashboard v1.1</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
-  body {
-    font-family: system-ui, sans-serif;
-    background: #e0f7fa;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    min-height: 100vh;
-  }
+  body { font-family: system-ui, sans-serif; background: #e0f7fa; display: flex; flex-direction: column; align-items: center; padding: 20px; min-height: 100vh; }
   h1 { margin-bottom: 15px; }
   .weather { margin-bottom: 20px; font-size: 1.2rem; }
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 320px;
-  }
-  input, textarea, button {
-    padding: 10px;
-    font-size: 1rem;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  button {
-    cursor: pointer;
-    background: #0077cc;
-    color: white;
-    border: none;
-    transition: background 0.3s;
-  }
+  form { display: flex; flex-direction: column; gap: 10px; width: 320px; }
+  input, textarea, button { padding: 10px; font-size: 1rem; width: 100%; border-radius: 5px; border: 1px solid #ccc; }
+  button { cursor: pointer; background: #0077cc; color: white; border: none; transition: background 0.3s; }
   button:hover { background: #005fa3; }
   #confirmation { color: green; margin-top: 10px; text-align: center; }
   footer { margin-top: 30px; font-size: 0.8rem; color: #555; }
@@ -44,7 +19,7 @@
 </head>
 <body>
 
-<h1>Beach House Dashboard v1.0</h1>
+<h1>Beach House Dashboard v1.1</h1>
 <div class="weather" id="weather">Loading weather...</div>
 
 <form id="requestForm">
@@ -55,7 +30,7 @@
 </form>
 
 <div id="confirmation"></div>
-<footer>Version 1.0</footer>
+<footer>Version 1.1</footer>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
@@ -64,6 +39,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const supabaseKey = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
   const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
+  // =================== FORM SUBMISSION ===================
   const form = document.getElementById('requestForm');
   const confirmation = document.getElementById('confirmation');
 
@@ -85,7 +61,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   // =================== WEATHER ===================
   const weatherEl = document.getElementById('weather');
-  const apiKey = 'YOUR_OPENWEATHERMAP_API_KEY'; // Replace with your OpenWeatherMap API key
+  const apiKey = 'YOUR_OPENWEATHERMAP_API_KEY'; // Replace with your free key
   const location = 'Orange County, US';
 
   async function getWeather() {
