Update admin page to version 1.1

--- a/admin.html
+++ b/admin.html
@@ -3,28 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Admin v1.0</title>
+<title>Beach House Admin v1.1</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
   body { font-family: system-ui, sans-serif; background: #fff8e1; padding: 20px; min-height: 100vh; }
   h1 { margin-bottom: 20px; text-align: center; }
-  .request {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 12px;
-    margin-bottom: 10px;
-    background: #fff;
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
-  }
+  .request { border: 1px solid #ccc; border-radius: 5px; padding: 12px; margin-bottom: 10px; background: #fff; box-shadow: 1px 1px 5px rgba(0,0,0,0.1); }
   .request p { margin: 3px 0; }
   footer { margin-top: 20px; font-size: 0.8rem; color: #555; text-align: center; }
 </style>
 </head>
 <body>
 
-<h1>All Work Requests v1.0</h1>
+<h1>All Work Requests v1.1</h1>
 <div id="requests">Loading...</div>
-<footer>Version 1.0</footer>
+<footer>Version 1.1</footer>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
